--- a/package.json
+++ b/package.json
@@ -1,27 +1,38 @@
 {
-  "name": "jfong-fmla-clientside",
-  "version": "1.0.0",
-  "description": "For local dev",
-  "main": "index.js",
+  "name": "smedberg.github.io",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "babel-preset-react-app": "^3.1.2",
-    "survey-react": "^1.8.78"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.26.0"
+    "cra-template": "1.1.2",
+    "react": "^16.5.0",
+    "react-dom": "^16.5.0",
+    "react-markdown": "^7.1.1",
+    "react-render-html": "^0.6.0",
+    "react-scripts": "4.0.3",
+    "survey-react": "^1.8.79"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/smedberg/smedberg.github.io.git"
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
-  "bugs": {
-    "url": "https://github.com/smedberg/smedberg.github.io/issues"
-  },
-  "homepage": "https://github.com/smedberg/smedberg.github.io#readme"
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
