--- a/.github/workflows/build_js.yaml
+++ b/.github/workflows/build_js.yaml
@@ -12,4 +12,4 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Deploy
-        run: yaml deploy
+        run: yarn deploy
