Install react-scripts before build/deploy

--- a/.github/workflows/build_js.yaml
+++ b/.github/workflows/build_js.yaml
@@ -11,5 +11,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Install react-scripts
+        run: npm install react-scripts
       - name: Deploy
         run: yarn deploy
