--- a/.github/workflows/build_js.yaml
+++ b/.github/workflows/build_js.yaml
@@ -13,5 +13,10 @@ jobs:
         uses: actions/checkout@v2
       - name: Install react-scripts
         run: npm install react-scripts
+      - name: Build
+        run: yarn build
       - name: Deploy
-        run: yarn deploy
+        uses: JamesIves/github-pages-deploy-action@4.1.6
+        with:
+          branch: main # The branch the action should deploy to.
+          folder: build # The folder the action should deploy.
